# fractals-shaders

./: index.html  pyproject.toml  run.py
fractals_shaders/: constants.py  main.py
shaders/: shader.glsl
