[tool.poetry]
name = "fractals"
version = "0.1.0"
description = "Experimentations with fractals and shaders"
authors = ["ddorn <diego.dorn@free.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
moderngl-window = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
